# ASPMS

./: .gitignore  ASPMS.cabal  Build.hs  README.md  SavedData_1545381847  run.cmd  stack.yaml
app/: Main.hs
data/: AccountData
doc/: ATR Support Tools.md  Docs.md
res/: Login.html  home.css
src/: AccountDataSource.hs  Client.hs  ConversionScript.hs  Credentials.hs  Css.hs  Html.hs  Js.hs  Network.hs  Server.hs  Types.hs  Utility.hs
